Update VariantAnnotation to implement VariantAnnotations and no longer extend AbstractVariant